--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "Desafio QA mercado eletronico",
   "main": "index.js",
   "scripts": {
+    "allure:run": "cypress run --config video=false --env allure=true",
+    "allure:report": "allure generate allure-results",
+    "allure:open": "allure open allure-report",
+    "allure:clear": "rm -r allure-results/ allure-report || true",
+
+    "test2": "npx npm-run-all allure:clear allure:run allure:report",
     "test": "cypress open",
-    "cy:run": "npx cypress run -b chrome" 
+
+    "cy:run": "npx cypress run -b chrome"
   },
   "keywords": [
     "js",
@@ -15,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelex/cypress-allure-plugin": "^2.26.5",
     "cypress": "^9.5.2",
     "faker": "=5.5.3"
   }
